[workspace]
resolver = "2"

members = [
    "shards-logger",
    "shards-browser",
    "xtask",
]

[profile.release]
opt-level = "s"

[profile.release.package.shards-browser]
codegen-units = 1 # Reduce parallel code generation units
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size
