[workspace]
resolver = "2"

members = [
    "shards-logger",
    "shards-browser",
    "xtask",
]

[profile.release]
opt-level = "s"
panic = "abort"   # On panic, abort immediately rather than unwinding.
lto = true        # Link time optimization

[profile.release.package.shards-browser]
codegen-units = 1 # Reduce parallel code generation units
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size
