[package]
name = "shards-browser"
version = "0.1.0"
authors = ["mathtin"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { package = "shards-logger", path = "../shards-logger" }
# Basic Immidiate GUI
egui = "0.31.1"
egui-wgpu = { version = "0.31.1", features = ["winit"] }
# Basic Graphics Stack
wgpu = { version = "24.0.5", default-features = false }
winit = { version = "0.30.11", features = ["android-native-activity"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native Immidiate GUI
egui-winit = "0.31.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Web Platform Immidiate GUI
egui-winit = { version = "0.31.1", default-features = false }
# Web API Bindings
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["wgpu/default"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[profile.release]
codegen-units = 1 # Reduce parallel code generation units
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size
lto = true        # Link time optimization
panic = "abort"   # On panic, abort immediately rather than unwinding.
