[package]
name = "shards-browser"
version = "0.1.0"
authors = ["mathtin"]
edition = "2024"

[package.metadata.wasm-pack.profile.release] 
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { package = "shards-logger", path = "../shards-logger" }
# Basic Immediate GUI
egui = "0.31.1"
egui-wgpu = { version = "0.31.1", features = ["winit"] }
# Basic Graphics Stack
wgpu = { version = "24.0.5", default-features = false }
winit = { version = "0.30.11", features = ["android-native-activity"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native Immediate GUI
egui-winit = "0.31.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Web Platform Immediate GUI
egui-winit = { version = "0.31.1", default-features = false }
# Web API Bindings
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["wgpu/default"]
webgl = ["wgpu/webgl"]
webgpu = ["wgpu/webgpu"]

[profile.release]
panic = "abort"   # On panic, abort immediately rather than unwinding.
lto = true        # Link time optimization
