[package]
name = "shards-logger"
version = "0.1.0"
edition = "2024"

[dependencies]
# Basic Logging
log = "0.4.27"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Native Platform Logging
env_logger = "0.11"
# Time formatting
time = { version = "0.3.41", features = ["formatting", "macros", "local-offset"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Web Platform Logging
console_error_panic_hook = "0.1.7"
# Web API Bindings
wasm-bindgen = "0.2.100"
# Time formatting
time = { version = "0.3.41", features = ["formatting", "wasm-bindgen", "macros", "local-offset"] }
